window width fix on mobile #test4

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,10 +1,13 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
-  // height: 100vh;
+  height: 100vh;
   width: 100vw;
   min-height: 100vh;
   min-width: 100vw;
+  @include respond(phone){
+    min-width: 99vw;
+  }
 }
 
 body {
@@ -17,7 +20,7 @@ body {
 html,
 body {
   @include respond(phone){
-    zoom: 70%;
+    // zoom: 70%;
   }
 }
 
