--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,9 +22,16 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  height: 100vh;
   width: 100vw;
   min-height: 100vh;
   min-width: 100vw;
+}
+
+@media (max-width: 37.5em) {
+  html {
+    min-width: 99vw;
+  }
 }
 
 body {
@@ -32,13 +39,6 @@ body {
   display: block;
   position: absolute;
   overflow-x: hidden;
-}
-
-@media (max-width: 37.5em) {
-  html,
-  body {
-    zoom: 70%;
-  }
 }
 
 body::after {
